[package]
name = "escrow_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_contract"

[features]
no-entrypoint = []
no-idl = []
no-cpi = []
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["derive"] }